# ConvertX

./: ._INSTRUCOES_FORK.md  .dockerignore  .env.development  .env.local.example  .eslintrc.cjs  .gitignore  .prettierignore  API.md  CHANGELOG.md  CLAUDE.md  Debian.Dockerfile  Dockerfile  Dockerfile.backup  Dockerfile.full  Dockerfile.lite  Dockerfile.offline  Dockerfile.v0.1.11  IMPLEMENTATION_SUMMARY.md  INSTRUCOES_FORK.md  LICENSE  LICENSE-AUTHOR  LICENSE-OVERVIEW.md  PLANO_FORK_SERVICO.md  README.md  SECURITY.md  UPGRADE.md  biome.json  bun.lockb  compose.local.yaml  compose.yaml  docker-compose.README.md  docker-compose.yml  eslint.config.js  eslint.config.mjs  eslint.config.ts  flake.nix  knip.json  mise.toml  moher@gov  package.json  (+10 more)
.claude/: build.md  commit.md  pr.md  test.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  UPSTREAM_SYNC.md  dependabot.yml  release.yml
api-server/: .env.api.example  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
api-server/docs/: API_SPEC.md  ARCHITECTURE.md
api-server/scripts/: health_check.sh
api-server/src/: auth.rs  config.rs  conversion.rs  engine.rs  error.rs  graphql.rs  lib.rs  main.rs  models.rs  rest.rs
api-server/tests/: api_tests.rs  graphql_tests.rs  integration_tests.rs
docs/: 00-專案總覽.md  01-快速開始.md  02-部署指南.md  03-環境變數與設定.md  04-功能總覽.md  05-API文件.md  06-錯誤排查與支援.md  07-開發與貢獻指南.md  08-授權說明.md  Docker說明.md  README.md  advanced-usage.md  configuration.md  converters.md  deployment.md  docker.md  environment-variables.md  faq.md  getting-started.md  i18n.md  國際化說明.md  (+10 more)
(+428 files in other folders)
